# gtk-raytraycer

./: CMakeLists.txt  README.md  geometry.h  main.c
